# dioxus_monorepo

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODO.md  flake.nix  package.json  rust-toolchain.toml
dioxus_music/: CLAUDE.md  TODO.md
discord_bot/: Cargo.toml  Dioxus.toml  README.md  modpack  sample.env
discord_bot/assets/: modpack_generated.json  tailwind.css
discord_bot/assets/styling/: main.css
discord_bot/locales/: en.yml
discord_bot/migrations/2025-11-28-170923-0000_create_messages_and_roles/: down.sql  up.sql
discord_bot/src/: app.rs  discord.rs  error.rs  lib.rs  main.rs  models.rs  oci.rs  queries.rs  schema.rs  state.rs
discord_bot/src/components/: navbar.rs
discord_bot/src/schedule1/: domain.rs  mod.rs
discord_bot/src/schedule1/components/: add_ingredients.rs  addictiveness.rs  base_products.rs  causes.rs  expenses.rs  mix_map.rs  mod.rs  price_per_unit.rs  pseudo_options.rs  save_product.rs  saved_recipes.rs  sell_prices.rs  soil_options.rs  total_price.rs  yield_options.rs
discord_bot/src/views/: home.rs  logs.rs  mod.rs  modpack.rs  privacy_policy.rs  schedule1.rs  terms_of_service.rs
game_manager/: Cargo.toml  Dioxus.toml  README.md
game_manager/src/: main.rs  players.rs
httpui/: Cargo.toml  Dioxus.toml  README.md
httpui/docs/stitch/collections_environments/: code.html
httpui/docs/stitch/kinetic_obsidian/: DESIGN.md
httpui/docs/stitch/request_editor/: code.html
httpui/docs/superpowers/plans/: 2026-03-20-kinetic-ui-redesign.md
httpui/docs/superpowers/specs/: 2026-03-20-kinetic-ui-redesign-design.md
httpui/src/: main.rs
httpui/src/components/: color_picker.rs  icon_picker.rs  mod.rs  style.css
httpui/src/components/button/: component.rs  style.css
httpui/src/components/icon_select_trigger/: component.rs
httpui/src/components/select/: component.rs  style.css
httpui/src/state/: mod.rs  models.rs  persistence.rs  store.rs
httpui/src/views/: mod.rs
httpui/src/views/canvas/: component.rs  style.css
httpui/src/views/collection/: component.rs
httpui/src/views/explorer/: component.rs  style.css
httpui/src/views/layout_grid/: component.rs  style.css
httpui/src/views/modals/: create_modal.rs  mod.rs  style.css
httpui/src/views/navbar/: component.rs  style.css
httpui/src/views/request/: component.rs
httpui/src/views/request_editor/: component.rs  style.css
httpui/src/views/response_viewer/: component.rs  style.css
httpui/src/views/settings/: collection_settings.rs  component.rs  environment_settings.rs  mod.rs
httpui/src/views/sidenav/: component.rs  style.css
httpui/src/views/space/: component.rs
httpui/src/views/statusbar/: component.rs  style.css
httpui/src/views/tabbar/: component.rs  style.css
httpui/src/views/topbar/: component.rs  style.css
httpui/src/views/urlbar/: component.rs  style.css
kinetic_ui/: Cargo.toml
kinetic_ui/src/: lib.rs
kinetic_ui/src/components/: mod.rs
kinetic_ui/src/components/accordion/: component.rs  style.css
kinetic_ui/src/components/alert_dialog/: style.css
kinetic_ui/src/components/aspect_ratio/: style.css
kinetic_ui/src/components/avatar/: style.css
kinetic_ui/src/components/badge/: component.rs  style.css
kinetic_ui/src/components/button/: component.rs  style.css
kinetic_ui/src/components/calendar/: style.css
kinetic_ui/src/components/card/: style.css
kinetic_ui/src/components/date_picker/: component.rs
kinetic_ui/src/components/drag_and_drop_list/: style.css
kinetic_ui/src/components/dropdown_menu/: style.css
kinetic_ui/src/components/icon_button/: component.rs  style.css
kinetic_ui/src/components/input/: component.rs  style.css
kinetic_ui/src/components/kbadge/: component.rs  style.css
kinetic_ui/src/components/kbutton/: component.rs  style.css
kinetic_ui/src/components/kinput/: component.rs
kinetic_ui/src/components/kselect/: component.rs
kinetic_ui/src/components/kseparator/: style.css
kinetic_ui/src/components/ktabs/: component.rs
kinetic_ui/src/components/pagination/: style.css
kinetic_ui/src/components/progress/: style.css
kinetic_ui/src/components/radio_group/: style.css
kinetic_ui/src/components/search_input/: component.rs  style.css
kinetic_ui/src/components/select/: component.rs  style.css
kinetic_ui/src/components/separator/: component.rs  style.css
kinetic_ui/src/components/sheet/: style.css
kinetic_ui/src/components/sidebar/: style.css
kinetic_ui/src/components/switch/: style.css
kinetic_ui/src/components/table/: component.rs  style.css
kinetic_ui/src/components/tabs/: component.rs  style.css
kinetic_ui/src/components/textarea/: style.css
kinetic_ui/src/components/theme_toggle/: component.rs
kinetic_ui/src/components/toggle/: style.css
kinetic_ui/src/components/toggle_group/: style.css
kinetic_ui/src/components/toolbar/: style.css
kinetic_ui/src/components/tooltip/: component.rs  style.css
kinetic_ui/src/components/tree_view/: component.rs  style.css
kinetic_ui/src/theme/: kinetic-theme.css  mod.rs  typography.css  utilities.css
minecraft_modpack/: Cargo.toml  Dioxus.toml  README.md  build.rs
minecraft_modpack/modpack/: .packwizignore  index.toml  pack.toml
minecraft_modpack/src/: main.rs
pdf_margins/: Cargo.toml  README.md  (+3 more)
pdf_margins_dioxus/: Cargo.toml  Dioxus.toml
pdf_margins_dioxus/assets/: style.css
pdf_margins_dioxus/src/: center_pdf.rs  main.rs
portfolio/: Cargo.toml  Dioxus.toml  README.md
portfolio/assets/styling/: main.css  navbar.css
portfolio/src/: json_resume.rs  main.rs
portfolio/src/components/: mod.rs  navbar.rs  user_header.rs
portfolio/src/views/: education.rs  me.rs  mod.rs  projects.rs  work.rs
schedule1/: Cargo.toml  Dioxus.toml  README.md  input.css  read_save.js
schedule1/src/: main.rs  sellable.rs
schedule1/src/components/: add_ingredients.rs  addictiveness.rs  base_products.rs  button.rs  causes.rs  expenses.rs  icon_button.rs  mix_map.rs  mod.rs  price_per_unit.rs  pseudo_options.rs  save_product.rs  saved_recipes.rs  sell_prices.rs  soil_options.rs  total_price.rs  yield_options.rs
(+33 files in other folders)
