[workspace]
members = [
    "discord_bot",
    "game_manager",
    "httpui",
    "dioxus_music/packages/ui",
    "dioxus_music/packages/web",
    "dioxus_music/packages/desktop",
    "dioxus_music/packages/mobile",
    "dioxus_music/packages/api",
]
resolver = "2"

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
inherits = "dev"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = "0.9"
chrono = "0"
deadpool-diesel = "0"
diesel = "2"
diesel-async = "0.5"
diesel_migrations = "2"
dioxus = "0.7"
dioxus-cli-config = "0.7"
dioxus-free-icons = "0"
dioxus-logger = "0.7"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dirs = "6"
dotenvy = "0"
fastrand = "2"
jsonwebtoken = "10"
lofty = "0"
mc-query = "2"
mime = "0"
oxford_join = "0"
poise = "0"
rand = "0.8"
reqwest = "0"
rsa = "0"
rust-i18n = "3"
serde = "1"
serde_json = "1"
serenity = "0"
strum = "0"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
tower = "0"
tower-http = "0"
tracing = "0"
tracing-subscriber = "0"
url = "2"
uuid = "1"
walkdir = "2"


# workspace
dioxus_music_ui = { path = "dioxus_music/packages/ui" }
dioxus_music_api = { path = "dioxus_music/packages/api" }
