[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
edition = "2024"
repository = "https://github.com/toyvo/discord_bot"

[package.metadata.i18n]
available-locales = ["en"]
default-locale = "en"
load-path = "locales"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, features = ["cookie", "cookie-signed", "typed-header"], optional = true }
chrono = { workspace = true, features = ["rkyv"] }
deadpool-diesel = { workspace = true, features = ["postgres"], optional = true }
diesel = { workspace = true, features = ["postgres", "chrono", "uuid"], optional = true }
diesel_migrations = { workspace = true, optional = true }
dioxus = { workspace = true, features = ["router", "fullstack"] }
kinetic_ui = { workspace = true }
dioxus-cli-config = { workspace = true, optional = true }
dioxus-logger = { workspace = true, optional = true }
mc-query = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
poise = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"] }
rust-i18n = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serenity = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower = { workspace = true, features = ["full"], optional = true }
tower-http = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = [
    "dioxus/server",
    "dep:axum",
    "dep:axum-extra",
    "dep:deadpool-diesel",
    "dep:diesel",
    "dep:diesel_migrations",
    "dep:dioxus-cli-config",
    "dep:dioxus-logger",
    "dep:mc-query",
    "dep:mime",
    "dep:poise",
    "dep:serenity",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:url",
    "dep:uuid",
]

[build-dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
volatile-composites = "allow"
unwrap_used = "deny"
