[package]
name = "game_manager"
version = "0.1.0"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, features = ["cookie", "cookie-signed", "typed-header"], optional = true }
chrono = { workspace = true, features = ["rkyv"] }
dioxus = { workspace = true, features = ["router", "fullstack"] }
dioxus-cli-config = { workspace = true, optional = true }
dioxus-logger = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"], optional = true }
mc-query = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
oxford_join = { workspace = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"] }
rsa = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower = { workspace = true, features = ["full"], optional = true }
tower-http = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = [
    "dioxus/server",
    "dep:axum",
    "dep:axum-extra",
    "dep:dioxus-cli-config",
    "dep:dioxus-logger",
    "dep:jsonwebtoken",
    "dep:mc-query",
    "dep:mime",
    "dep:rand",
    "dep:rsa",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:url",
    "dep:uuid",
]
